--- a/03 영속성 관리.md
+++ b/03 영속성 관리.md
@@ -1,2 +1,18 @@
 # 영속성 관리
-저녁에 고고
+JPA가 제공하는 기능     
+   
+1. 엔티티와 테이블을 매핑하는 설계 부분 
+2. 엔티티를 실제 사용하는 부분   
+
+이번에는 매핑한 엔티티를 `EntityManager`를 통해 어떻게 사용하는지 알아볼것입니다.     
+     
+**EntityManager** : 엔티티를 저장하고 수정하고, 삭제하고 조회하는 등 엔티티와 관련된 모든 일을 처리합니다.     
+개발자 입장에서는 엔티티를 저장하는 가상의 데이터베이스라고 생각하면 됩니다.      
+
+# EntityMangerFactory 와 EntityManger
+
+
+
+
+
+
