Update 03 영속성 관리.md

--- a/03 영속성 관리.md
+++ b/03 영속성 관리.md
@@ -10,6 +10,55 @@ JPA가 제공하는 기능
 개발자 입장에서는 엔티티를 저장하는 가상의 데이터베이스라고 생각하면 됩니다.      
 
 # EntityMangerFactory 와 EntityManger
+데이터베이스를 1개만 사용하는 애플리케이션은 일반적으로 EntityMangerFactory를 하나만 생성합니다.    
+
+**EntityMangerFactory 생성 방법**
+```java
+    EntityManagerFactory emf = Persistence.createEntityManagerFactory("jpabook");
+```
+`Persistence.createEntityManagerFactory("jpabook");`를 호출하면   
+`META-INF/persistence.xml`에 있는    
+**`<persistence-unit name="jpabook"></persistence-unit>`**의 정보를 바탕으로 `EntityManagerFactory`를 만듭니다.      
+
+**META-INF/persistence.xml**
+```xml
+    <persistence-unit name="jpabook">
+        <properties>
+
+            <!-- 필수 속성 -->
+            <property name="javax.persistence.jdbc.driver" value="org.h2.Driver"/>
+            <property name="javax.persistence.jdbc.user" value="sa"/>
+            <property name="javax.persistence.jdbc.password" value=""/>
+            <property name="javax.persistence.jdbc.url" value="jdbc:h2:tcp://localhost/~/test"/>
+            <property name="hibernate.dialect" value="org.hibernate.dialect.H2Dialect" />
+
+            <!-- 옵션 -->
+            <property name="hibernate.show_sql" value="true" />
+            <property name="hibernate.format_sql" value="true" />
+            <property name="hibernate.use_sql_comments" value="true" />
+            <property name="hibernate.id.new_generator_mappings" value="true" />
+
+            <!--<property name="hibernate.hbm2ddl.auto" value="create" />-->
+        </properties>
+    </persistence-unit>
+```   
+즉, 해당 데이터베이스 관련 설정으로 만든 `EntityManagerFactory` 객체를 생성합니다.          
+이제부터 필요할 때마다 엔티티 매니저 팩토리에서 엔티티 매니저를 생성하면 됩니다.          
+    
+```java
+EntityManager em = emf.createEntityManager();
+```     
+
+**EntityManagerFactory**는 이름그대로 공장이라는 뜻으로 공장을 만드는 비용은 상당합니다.   
+그렇기에 우리는 **EntityManagerFactory**를 1개만 만들어서 애플리케이션 전체에서 **공유**하도록 설계해줘야합니다.      
+**EntityManagerFactory**는 여러 쓰레드가 동시에 접근해도 안전하므로(thread-safe)    
+**서로 다른 스레드 간에 자원을 공유해도 됩니다.**    
+
+반면에 `EntityManger`는 생성하는데 비용 소모가 거의 없으나   
+`EntityManger`를 동시에 접근하면 동시성 문제가 발생하므로 스레드 간에 절대 공유하면 안됩니다.   
+
+
+
 
 
 
