Update 03 영속성 관리.md

--- a/03 영속성 관리.md
+++ b/03 영속성 관리.md
@@ -56,6 +56,43 @@ EntityManager em = emf.createEntityManager();
 
 반면에 `EntityManger`는 생성하는데 비용 소모가 거의 없으나   
 `EntityManger`를 동시에 접근하면 동시성 문제가 발생하므로 스레드 간에 절대 공유하면 안됩니다.   
+   
+[사진]   
+
+`EntityManger`는 생성했다고 해서 데이터베이스 커넥션을 사용하지는 않습니다.         
+`EntityManger2`와 같이 데이터베이스와 연결이 꼭 필요한 시점에만 커넥션을 획득합니다.      
+즉, 트랜잭션이 시작하면 커넥션을 사용합니다.           
+   
+Hibernate 를 포함한 JPA 구현체들은 EntityManagerFactory를 생성할 때 커넥션풀도 만드는데 
+이는 J2SE 환경에서 사용하는 방법입니다. (일반적인 자바 프로그램 개발)    
+JPA를 J2EE 환경에서 사용하면 해당 컨테이너가 제공하는 데이터소스를 사용합니다. (웹 애플리케이션 개발)    
+이부분에 대해서는 추후에 설명하겠습니다.      
+
+## 영속선 컨텍스트란?   
+JPA를 이해하는데 가장 중요한 용어로 **엔티티를 영구 저장하는 환경**입니다.   
+`EntityManger`로 엔티티를 저장하거나 조회하면 엔티티 매니저는 영속성 컨텍스트에 엔티티를 보관하고 관리합니다.   
+
+```java
+em.persist(member);    
+```    
+지금까지는 단순히 해당 코드가 데이터베이스에 저장한다고 표현을 했습니다.          
+하지만 정확히 얘기한다면 **EntityManager 를 사용해 회원 엔티티를 `영속성 컨텍스트`에 저장합니다.**       
+    
+**영속성 컨텍스트 :** 논리적인 개념으로 EntityManager를 생성할 때 하나 만들어집니다.   
+EntityManager를 통해서 영속성 컨텍스트에 접근할 수 있고 영속성 컨텍스트를 관리할 수 있습니다.   
+
+```
+하나의 엔티티 매니저가 하나의 영속성 컨텍스트에 접근하던가 
+여러 엔티티 매니저가 하나의 영속성 컨텍스트에 접근하던가 합니다.   
+```
+   
+## 엔티티의 생명주기   
+
+
+
+
+
+
 
 
 
