--- a/03 영속성 관리.md
+++ b/03 영속성 관리.md
@@ -87,8 +87,36 @@ EntityManager를 통해서 영속성 컨텍스트에 접근할 수 있고 영속
 ```
    
 ## 엔티티의 생명주기   
+**엔티티 4가지 상태**    
+* 비영속 : 영속성 컨텍스트와 전혀 관계가 없는 상태   
+* 영속 : 영속성 컨텍스트에 저장된 상태   
+* 준영속 : 영속성 컨텍스트에 저장되었다가 분리된 상태   
+* 삭제 : 삭제된 상태 
 
-취업 시즌까지 일단 올 스탑 
+### 비영속   
+> 엔티티 객체를 생성했지만 아직 저장하지 않은 상태     
+
+* `Entity entity = new Entitiy();`
+
+### 영속
+> 엔티티가 영속성 컨텍스트에 저장된 상태        
+> 영속 상태 : 영속성 컨텍스트에 의해 관리되는 엔티티 상태를 의미한다.     
+   
+* `em.persist(entity);`
+
+
+### 준영속   
+> 영속 상태의 엔티티를 영속성 컨텍스트가 관리하지 않으면서 바뀌는 상태     
+
+* `em.detach(entity)`
+
+### 삭제      
+> 엔티티가 영속성 컨텍스트에서 삭제된 상태  
+
+* `em.remove(entity)`    
+
+
+
 
 
 
