--- a/03 영속성 관리.md
+++ b/03 영속성 관리.md
@@ -6,10 +6,19 @@ JPA가 제공하는 기능
 
 이번에는 매핑한 엔티티를 `EntityManager`를 통해 어떻게 사용하는지 알아볼 것입니다.     
      
-**EntityManager** : 엔티티를 저장하고 수정하고, 삭제하고 조회하는 등 엔티티와 관련된 모든 일을 처리합니다.     
-개발자 입장에서는 엔티티를 저장하는 가상의 데이터베이스라고 생각하면 됩니다.      
+```java
+EntityManager em;
 
-# EntityMangerFactory 와 EntityManger
+em.persist(entity);
+em.remove(entity)
+```
+
+**EntityManager** :    
+엔티티를 저장하고 수정하고, 삭제하고 조회하는 등 엔티티와 관련된 모든 일을 처리합니다.        
+개발자 입장에서는 엔티티를 저장하는 가상의 데이터베이스라고 생각하면 됩니다.           
+
+# EntityMangerFactory 와 EntityManger   
+## EntityMangerFactory   
 * 데이터베이스를 1개만 사용하는 애플리케이션은 일반적으로 EntityMangerFactory를 하나만 생성합니다.   
    
 **EntityMangerFactory 생성 방법**
@@ -44,13 +53,16 @@ JPA가 제공하는 기능
 ```   
 즉, 해당 데이터베이스 관련 설정으로 만든 `EntityManagerFactory` 객체를 생성합니다.          
 이제부터 필요할 때마다 엔티티 매니저 팩토리에서 엔티티 매니저를 생성하면 됩니다.          
-    
+
+## EntityManger   
+
 ```java
+EntityManagerFactory emf = Persistence.createEntityManagerFactory("jpabook");
 EntityManager em = emf.createEntityManager();
 ```     
 
 * **EntityManagerFactory**는 이름 그대로 공장이라는 뜻으로 공장을 만드는 비용은 상당합니다.   
-* 그렇기에 우리는 **EntityManagerFactory**를 1개만 만들어서 애플리케이션 전체에서 **공유**하도록 설계해줘야합니다.      
+* 그렇기에 우리는 **EntityManagerFactory**를 1개만 만들어서 애플리케이션 **전체에서 공유하도록 설계**해줘야합니다.      
 * **EntityManagerFactory**는 여러 쓰레드가 동시에 접근해도 안전하므로(thread-safe)    
 * **서로 다른 스레드 간에 자원을 공유해도 됩니다.**    
 
