Update 03 영속성 관리.md

--- a/03 영속성 관리.md
+++ b/03 영속성 관리.md
@@ -4,19 +4,20 @@ JPA가 제공하는 기능
 1. 엔티티와 테이블을 매핑하는 설계 부분 
 2. 엔티티를 실제 사용하는 부분   
 
-이번에는 매핑한 엔티티를 `EntityManager`를 통해 어떻게 사용하는지 알아볼 것입니다.     
+매핑한 엔티티를 `엔티티 매니저(Entity Manager)`를 통해 어떻게 사용하는것일까?
      
+**엔티티 매니저(Entity Manager)** :    
+엔티티를 저장하고 수정하고, 삭제하고 조회하는 등 엔티티와 관련된 모든 일을 처리합니다.              
+개발자 입장에서는 엔티티를 저장하는 가상의 데이터베이스라고 생각하면 쉽습니다.        
+    
 ```java
 EntityManager em;
 
 em.persist(entity);
 em.remove(entity)
 ```
-
-**EntityManager** :    
-엔티티를 저장하고 수정하고, 삭제하고 조회하는 등 엔티티와 관련된 모든 일을 처리합니다.        
-개발자 입장에서는 엔티티를 저장하는 가상의 데이터베이스라고 생각하면 됩니다.           
-
+* 엔티티 매니저에 엔티티를 저장/삭제              
+   
 # EntityMangerFactory 와 EntityManger   
 ## EntityMangerFactory   
 * 데이터베이스를 1개만 사용하는 애플리케이션은 일반적으로 EntityMangerFactory를 하나만 생성합니다.   
@@ -24,11 +25,7 @@ em.remove(entity)
 **EntityMangerFactory 생성 방법**
 ```java
     EntityManagerFactory emf = Persistence.createEntityManagerFactory("jpabook");
-```
-* `Persistence.createEntityManagerFactory("jpabook");`를 호출하면   
-* `META-INF/persistence.xml`에 있는         
-* **`<persistence-unit name="jpabook"></persistence-unit>`**의 정보를 바탕으로 `EntityManagerFactory`를 만듭니다.        
-
+```    
 **META-INF/persistence.xml**
 ```xml
     <persistence-unit name="jpabook">
@@ -50,12 +47,11 @@ em.remove(entity)
             <!--<property name="hibernate.hbm2ddl.auto" value="create" />-->
         </properties>
     </persistence-unit>
-```   
-즉, 해당 데이터베이스 관련 설정으로 만든 `EntityManagerFactory` 객체를 생성합니다.          
-이제부터 필요할 때마다 엔티티 매니저 팩토리에서 엔티티 매니저를 생성하면 됩니다.          
-
+```     
+* `Persistence.createEntityManagerFactory("jpabook");`를 호출하면 `META-INF/persistence.xml`에 있는       
+* **`<persistence-unit name="jpabook"></persistence-unit>`**의 정보를 바탕으로 `EntityManagerFactory`를 생성합니다.           
+    
 ## EntityManger   
-
 ```java
 EntityManagerFactory emf = Persistence.createEntityManagerFactory("jpabook");
 EntityManager em = emf.createEntityManager();
