Update 03 영속성 관리.md

--- a/03 영속성 관리.md
+++ b/03 영속성 관리.md
@@ -49,7 +49,7 @@ em.remove(entity)
     </persistence-unit>
 ```     
 * `Persistence.createEntityManagerFactory("jpabook");`를 호출하면 `META-INF/persistence.xml`에 있는       
-* **`<persistence-unit name="jpabook"></persistence-unit>`**의 정보를 바탕으로 `EntityManagerFactory`를 생성합니다.           
+* `<persistence-unit name="jpabook"></persistence-unit>`의 정보를 바탕으로 `EntityManagerFactory`를 생성합니다.           
     
 ## EntityManger   
 ```java
