Update 03 영속성 관리.md

--- a/03 영속성 관리.md
+++ b/03 영속성 관리.md
@@ -1,8 +1,8 @@
 # 영속성 관리
 JPA가 제공하는 기능     
    
-1. 엔티티와 테이블을 매핑하는 설계 부분 
-2. 엔티티를 실제 사용하는 부분   
+1. 엔티티와 테이블을 매핑하는 **설계 부분** 
+2. 엔티티를 **실제 사용하는 부분**   
 
 매핑한 엔티티를 `엔티티 매니저(Entity Manager)`를 통해 어떻게 사용하는것일까?
      
@@ -18,11 +18,11 @@ em.remove(entity)
 ```
 * 엔티티 매니저에 엔티티를 저장/삭제              
    
-# EntityMangerFactory 와 EntityManger   
-## EntityMangerFactory   
-* 데이터베이스를 1개만 사용하는 애플리케이션은 일반적으로 EntityMangerFactory를 하나만 생성합니다.   
+# 엔티티매니저 팩토리(EntityMangerFactory) 와 엔티티매니저(EntityManger)   
+## 엔티티매니저 팩토리(EntityMangerFactory)   
+* 데이터베이스를 1개만 사용하는 애플리케이션은 일반적으로 엔티티매니저 팩토리(EntityMangerFactory)를 하나만 생성합니다.   
    
-**EntityMangerFactory 생성 방법**
+**엔티티매니저 팩토리(EntityMangerFactory) 생성 방법**
 ```java
     EntityManagerFactory emf = Persistence.createEntityManagerFactory("jpabook");
 ```    
@@ -51,32 +51,26 @@ em.remove(entity)
 * `Persistence.createEntityManagerFactory("jpabook");`를 호출하면 `META-INF/persistence.xml`에 있는       
 * `<persistence-unit name="jpabook"></persistence-unit>`의 정보를 바탕으로 `EntityManagerFactory`를 생성합니다.           
     
-## EntityManger   
+## 엔티티매니저(EntityManger)   
 ```java
 EntityManagerFactory emf = Persistence.createEntityManagerFactory("jpabook");
 EntityManager em = emf.createEntityManager();
 ```     
 
-* **EntityManagerFactory**는 이름 그대로 공장이라는 뜻으로 공장을 만드는 비용은 상당합니다.   
-* 그렇기에 우리는 **EntityManagerFactory**를 1개만 만들어서 애플리케이션 **전체에서 공유하도록 설계**해줘야합니다.      
-* **EntityManagerFactory**는 여러 쓰레드가 동시에 접근해도 안전하므로(thread-safe)    
-* **서로 다른 스레드 간에 자원을 공유해도 됩니다.**    
+* `EntityManagerFactory`는 이름 그대로 공장이라는 뜻으로 공장을 만드는 비용은 상당합니다.   
+* 그렇기에 우리는 `EntityManagerFactory`를 **1개만 만들어서 애플리케이션 전체에서 공유하도록 설계**해줘야합니다.      
+* `EntityManagerFactory`는 여러 쓰레드가 동시에 접근해도 안전하므로(thread-safe) **서로 다른 스레드 간에 자원을 공유해도 됩니다.**    
 
 ___ 
     
 * 반면에 `EntityManger`는 생성하는데 비용 소모가 거의 없으나   
 * `EntityManger`를 동시에 접근하면 동시성 문제가 발생하므로 스레드 간에 절대 공유하면 안됩니다.   
    
-[사진]   
+![img](https://user-images.githubusercontent.com/50267433/99519577-638eae00-29d5-11eb-8e08-f8198290c0f9.png)
 
 * `EntityManger`는 생성했다고 해서 데이터베이스 커넥션을 사용하지는 않습니다.         
 * `EntityManger2`와 같이 데이터베이스와 연결이 꼭 필요한 시점에만 커넥션을 획득합니다.      
 * 즉, 트랜잭션이 시작하면 커넥션을 사용합니다.           
-   
-Hibernate 를 포함한 JPA 구현체들은 EntityManagerFactory를 생성할 때 커넥션풀도 만드는데 
-이는 J2SE 환경에서 사용하는 방법입니다. (일반적인 자바 프로그램 개발)    
-JPA를 J2EE 환경에서 사용하면 해당 컨테이너가 제공하는 데이터소스를 사용합니다. (웹 애플리케이션 개발)    
-이부분에 대해서는 추후에 설명하겠습니다.      
 
 ## 영속선 컨텍스트란?   
 * **엔티티를 영구 저장하는 환경**입니다.   
@@ -97,35 +91,52 @@ EntityManager를 통해서 영속성 컨텍스트에 접근할 수 있고 영속
 여러 엔티티 매니저가 하나의 영속성 컨텍스트에 접근하던가 합니다.   
 ```
    
-## 엔티티의 생명주기   
+# 엔티티의 생명주기   
 **엔티티 4가지 상태**    
 * 비영속 : 영속성 컨텍스트와 전혀 관계가 없는 상태   
 * 영속 : 영속성 컨텍스트에 저장된 상태   
 * 준영속 : 영속성 컨텍스트에 저장되었다가 분리된 상태   
 * 삭제 : 삭제된 상태 
 
-### 비영속   
+## 비영속   
 > 엔티티 객체를 생성했지만 아직 저장하지 않은 상태     
 
 * `Entity entity = new Entitiy();`
 
-### 영속
+## 영속
 > 엔티티가 영속성 컨텍스트에 저장된 상태        
 > 영속 상태 : 영속성 컨텍스트에 의해 관리되는 엔티티 상태를 의미한다.     
    
 * `em.persist(entity);`
 
 
-### 준영속   
+## 준영속   
 > 영속 상태의 엔티티를 영속성 컨텍스트가 관리하지 않으면서 바뀌는 상태     
 
 * `em.detach(entity)`
 
-### 삭제      
+## 삭제      
 > 엔티티가 영속성 컨텍스트에서 삭제된 상태  
 
 * `em.remove(entity)`    
 
+# 영속성 컨텍스트의 특징    
+* 영속성 컨텍스트와 식별자 값    
+   * 영속성 컨텍스트는 엔티티를 식별자 값으로 구분한다.   
+   * 따라서 **영속 상태는 식별자 값이 반드시 있어야 한다.**   
+   * 식별자가 없으면 예외가 발생한다.    
+* 영속성 컨텍스트와 데이터베이스 저장  
+   * 영속성 컨텍스트에 엔티티를 저장하면 언제 데이터베이스에 저장될까?   
+   * 트랜잭션을 커밋하는 순간 영속성 컨텍스트에 존재하는 엔티티를 반영  
+   * 영속성 컨텍스트에 존재하는 엔티티를 반영하는 것을 **플러시(flush)**라 한다.    
+* 영속성 컨텍스트가 엔티티를 관리하면 얻게되는 장점
+   * 1차 캐시  
+   * 동일성 보장   
+   * 트랜잭션을 지원하는 쓰기 지연   
+   * 변경 감지   
+   * 지연 로딩  
+
+## 엔티티 조회   
 
 
 
