Update 03 영속성 관리.md

--- a/03 영속성 관리.md
+++ b/03 영속성 관리.md
@@ -137,6 +137,30 @@ EntityManager를 통해서 영속성 컨텍스트에 접근할 수 있고 영속
    * 지연 로딩  
 
 ## 엔티티 조회   
+```java
+Member member = new Member();
+member.setId("member1");
+member.setUsername("회원1");
+
+em.persist(member);
+```
+![img (1)](https://user-images.githubusercontent.com/50267433/99521280-92a61f00-29d7-11eb-998b-ab09e9f14869.png)   
+  
+* 영속성 컨텍스트는 내부에 캐시를 가지고 있는데 이를 **1차 캐시**라 부른다.   
+   * 트렌젝션 단위의 굉장히 짧은 메모리 공간이다
+* 영속 상태 엔티티는 모두 이곳에 저장된다.
+   * 즉, 영속성 컨텍스트 내부에 있는 캐시에 먼저 저장된다는 것이다.   
+* 1차 캐시는 Map 구조로 이루어져있으며 키는 식별자, 값은 엔티티이다.
+   * 1차 캐시의 키는 데이터베이스 기본키와 매핑되어 있다.   
+
+```java
+Member member = em.find(Member.class, "member1");
+```
+      
+### 1차 캐시에서 엔티티 조회     
+
+
+    
 
 
 
