Update 03 영속성 관리.md

--- a/03 영속성 관리.md
+++ b/03 영속성 관리.md
@@ -156,6 +156,10 @@ em.persist(member);
 ```java
 Member member = em.find(Member.class, "member1");
 ```
+* 첫 번째 파라미터 : 엔티티 클래스의 타입 
+* 두 번째 파라미터 : 조회할 엔티티의 식별자 값 
+   
+`em.find()`를 호출하면 먼저 1차 캐시에서 엔티티를 찾고 없으면 데이터베이스에서 조회한다.      
       
 ### 1차 캐시에서 엔티티 조회     
 
