--- a/03 영속성 관리.md
+++ b/03 영속성 관리.md
@@ -162,7 +162,63 @@ Member member = em.find(Member.class, "member1");
 `em.find()`를 호출하면 먼저 1차 캐시에서 엔티티를 찾고 없으면 데이터베이스에서 조회한다.      
       
 ### 1차 캐시에서 엔티티 조회     
+```java
+Member member = new Member();
+member.setId("member1");
+member.setUsername("회원1");
 
+em.persist(member);
+Member member = em.find(Member.class, "member1");
+```
+![1차 캐시 조회](https://user-images.githubusercontent.com/50267433/99524346-a81d4800-29db-11eb-86fa-56ab68964a2e.png)    
+   
+* 앞서 말했듯이 `em.find()`를 호출하면 먼저 1차 캐시에서 엔티티를 찾고 없으면 데이터베이스에서 조회한다.        
+
+### 데이터베이스에서 조회
+```java
+Member member = new Member();
+member.setId("member1");
+member.setUsername("회원1");
+
+em.persist(member);
+Member member = em.find(Member.class, "member2"); // 여기가 2로 바뀜 
+```  
+![DB 조회](https://user-images.githubusercontent.com/50267433/99524098-4ceb5580-29db-11eb-9d88-03a80f194ea9.png)
+
+* `em.find()`를 호출하면 먼저 1차 캐시에서 엔티티를 찾고 없으면 데이터베이스에서 조회한다.        
+* 현재 1차 캐시에 `member2`식별자를 가진 엔티티가 존재하지 않으므로 DB를 조회한다.  
+* DB에서 조회한 데이터로 `member2`식별자를 가진 엔티티를 생성해서 1차 캐시에 저장한다.(영속 상태로 만든다.)   
+* 조회한 엔티티를 반환한다.    
+   
+1차 캐시에 만들어 놓는 이유는?       
+캐시의 개념처럼 해당 엔티티를 다음에 다시 사용할 일이 있을 때 DB 연결을 하지않고 빠르게 사용하여 성능상 이점을 누릴 수 있다.         
+
+### 영속성 엔티티 동일성 보장   
+```java
+Member a = em.find(Member.class, "member1");
+Member b = em.find(Member.class, "member2");
+
+System.out.println(a == b);
+```
+* `a == b` 는 참일까 거짓일까?
+* 정답은 **참**이다.   
+* 특정 식별자를 반복해서 호출해도 **같은 엔티티를 반환한다.**   
+* 따라서 **영속성 컨텍스트는 1차 캐시를 이용한 성능상 이점과 같은 엔티티를 반환함으로써 엔티티의 동일성을 보장한다.**     
+
+**참고**
+```
+동일성: 실제 인스턴스가 같다. 따라서 참조 값을 비교하는 == 비교의 값이 같다.   
+동등성: 실제 인스턴스는 다를 수 있지만 인스턴스가 가지고 있는 값이 같다. equals()   
+```
+```
+JPA는 1차 캐시를 텅해 반복 가능한 읽기(REPEATBLE READ) 등급의 트랜잭션 격리 수준을
+데이터베이스가 아닌 애플리케이션 차원에서 제공한다는 장점이 있다.   
+```
+
+
+
+
+      
 
     
 
