Update 03 영속성 관리.md

--- a/03 영속성 관리.md
+++ b/03 영속성 관리.md
@@ -265,8 +265,8 @@ commit(); // 트랜잭션 커밋
           
 * 변경된 데이터베이스 내용을 변경전 상태로 되돌린다.       
    
-또한, 버퍼의 장점처럼 한번에 모아서 처리하는 것이 아닌 각각 하나씩 처리하는 것이기에 연산량이 많아진다는 문제가 있다.   
-그렇기 때문에, 쓰기 지연 기능을 이용해서 보다 효율적인 처리를 적용하는 것이 좋다.      
+또한, 각각 하나씩 처리하는 것이기에 연산량이 많아진다는 문제가 있다.   
+그렇기 때문에, 쓰기 지연 기능을 이용해서 효율적인 처리를 적용하는 것이 좋다.      
 
       
 
