Update 03 영속성 관리.md

--- a/03 영속성 관리.md
+++ b/03 영속성 관리.md
@@ -268,9 +268,75 @@ commit(); // 트랜잭션 커밋
 또한, 각각 하나씩 처리하는 것이기에 연산량이 많아진다는 문제가 있다.   
 그렇기 때문에, 쓰기 지연 기능을 이용해서 효율적인 처리를 적용하는 것이 좋다.      
 
-      
+## 엔티티 수정    
+### SQL 수정 쿼리의 문제점      
+> SQL을 사용하면 수정 쿼리를 직접 작성해야하고 규모가 커질수록 관리해야할 컬럼이 많아진다.        
 
+**NAME 과 AGE를 수정하는 쿼리**
+```sql
+UPDATE MEMBER
+SET
+   NAME=?,
+   AGE=?,
+WHERE
+   ID=?
+```
+
+**NAME 과 AGE와 GRADE를 수정하는 쿼리**
+```sql
+UPDATE MEMBER
+SET
+   NAME=?,
+   AGE=?,
+   GRADE=?
+WHERE
+   ID=?
+```
+
+* 위 SQL은 `NAME 과 AGE를 수정하는 쿼리`에서도 사용할 수 있으므로 관리를 해야한다는 문제점이 있다.    
+* 만약 관리하지 않을 경우 특정 컬럼을 누락하거나 잘못 입력하는 경우도 생긴다.   
+* 그렇기 때문에 사용하기 전에 쿼리가 어떤식으로 작성되었는지 확인해야한다.   
+        
+즉, 수정 쿼리가 많아지는 것은 물론이고 비즈니스 로직을 분석하기 위해 SQL을 계속 확인해야한다.
+결국 직접적이든 간접적이든 비즈니스 로직이 SQL에 의존하게 된다.        
+
+### 변경 감지   
+JPA의 수정은 다른가?
+
+```java
+EntityManagerFactory emf = Persistence.createEntityManagerFactory("jpabook");
+EntityManager em = emf.createEntityManager();
+EntityTransaction transaction = em.getTransaction();
+transaction.begin();
+
+// 영속 엔티티 조회
+Member memberA = em.find(Member.class, "memberA");
+
+// 영속 데이터 수정
+memberA.setUsername("hi");
+memberA.setAge(10);
+
+// em.update(member); 이런 코드가 있어야 하지 않을까?   
+
+transaction.commit(); // 커밋
+```  
+**JPA로 엔티티를 수정할때는 단순히 엔티티를 조회해서 데이터만 변경하면 된다.**   
+즉, `em.update()`라는 메서드도 존재하지도 않고 사용하지도 않는다.      
+그리고 이렇게 엔티티의 변경사항을 데이터베이스에 자동으로 반영하는 것을 **변경 감지**라고 부른다.   
+  
+그렇다면 **왜** 일까?   
+* JPA는 엔티티를 영속성 컨텍스트에 보관할 때, 최초 상태를 복사해서 저장해둔다. (이를 **스냅샷**이라고 한다.)   
+* 그리고 **플러시 시점에 스냅샵과 엔티티를 비교해서 변경된 엔티티를 찾는다.**
+      
+![변경 감지](https://user-images.githubusercontent.com/50267433/99532638-f8020c00-29e7-11eb-80a3-35e20d990492.png)    
     
+1. 트랜잭션을 커밋하면 엔티티 매니저 내부에서 먼저 플러시가 호출된다.      
+2. 엔티티와 스냅샷을 비교해서 변경된 엔티티를 찾는다.  
+3. 변경된 엔티티가 있으면 수정 쿼리를 생성해서 쓰기 지연 SQL 저장소에 보낸다.   
+4. 쓰기 지연 저장소의 SQL을 데이터베이스에 보낸다.   
+5. 데이터베이스 트랜잭션을 커밋한다.   
+  
+     
 
 
 
