--- a/03 영속성 관리.md
+++ b/03 영속성 관리.md
@@ -335,9 +335,38 @@ transaction.commit(); // 커밋
 3. 변경된 엔티티가 있으면 수정 쿼리를 생성해서 쓰기 지연 SQL 저장소에 보낸다.   
 4. 쓰기 지연 저장소의 SQL을 데이터베이스에 보낸다.   
 5. 데이터베이스 트랜잭션을 커밋한다.   
-  
-     
+         
+**변경 감지는 영속성 컨텍스트가 관리하는 영속 상태의 엔티티에만 적용된다.**         
+비영속, 준영속처럼 영속성 컨텍스트의 관리를 받지 못하는 엔티티는 값을 변경해도 데이터베이스에 반영되지 않는다.       
+    
+**JPA 의 변경 감지를 이용한 쿼리**   
+```sql
+UPDATE MEMBER
+SET 
+   NAME=?,
+   AGE=?,
+   GRADE=?
+   ...
+WHERE
+   id=?  
+```  
+* **JPA의 기본 전략은 예제 2.5처럼 엔티티의 모든 필드를 업데이트한다.**     
+* 이렇게 모든 필드를 사용하면 데이터베이스에 보내는 데이터 전송량이 증가하는 단점이 있지만, 아래와 같은 장점으로 모든 필드를 업데이트한다.     
+   * 모든 필드를 사용하면 수정 쿼리가 항상 같다.     
+   따라서 애플리케이션 로딩 시점에 수정 쿼리를 미리 생성해두고 재사용할 수 있다.     
+   * 데이터베이스에 동일한 쿼리를 보내면 데이터베이스는 이전에 한 번 파싱된 쿼리를 재사용할 수 있다.    
+   
+그리고 만약 필드가 무수히 많거나 저장되는 내용이 크면 수정된 데이터만 사용해서   
+동적으로 UPDATE SQL을 생성하는 전략을 선택하면 된다. (단, 이때는 Hiberanate 확장 기능 사용)    
 
+```java
+@Entity
+@org.hibernate.annotations.DynamicUpdate
+@Table(name = "member")
+public class Member { ... }   
+```
+* `@org.hibernate.annotations.DynamicUpdate`를 사용하면 동적으로 UPDATE SQL을 생성한다.      
+* 참고로 `@org.hibernate.annotations.DynamicInsert`를 이용하여 null값이 아닌 데이터를 동적으로 생성하는 경우도 있다.     
 
 
 
