--- a/03 영속성 관리.md
+++ b/03 영속성 관리.md
@@ -368,6 +368,46 @@ public class Member { ... }
 * `@org.hibernate.annotations.DynamicUpdate`를 사용하면 동적으로 UPDATE SQL을 생성한다.      
 * 참고로 `@org.hibernate.annotations.DynamicInsert`를 이용하여 null값이 아닌 데이터를 동적으로 생성하는 경우도 있다.     
 
+**팁**
+```
+상황에 따라 다르지만,  
+컬럼이 대략 30개 이상되면 동적 수정 쿼리가 빠르다고 합니다.
+가장 정확한 것은 본인의 환경에서 직접 테스트해보는 것이고   
+추천하는 방법으로는 기본 전략을 사용하고, 최적화가 필요할 정도로 느리면 그때 전략을 수정하면 됩니다.  
+
+참고로 한 테이블에 컬럼이 30개 이상 된다는 것은 테이블 설계상 책임이 적절히 분리되지 않았을 가능성이 높습니다.   
+```  
+  
+## 엔티티 삭제   
+```java
+Member memberA = em.find(Member.class, "memberA");
+em.remove(memberA);
+```
+* 엔티티를 삭제하려면 먼저 **삭제 대상 엔티티를 조회해야합니다.**     
+* `em.remove(삭제 대상 엔티티)`와 같은 형식으로 엔티티를 삭제할 수 있습니다.        
+   * 정확히 말하면 쓰기 지연 SQL 저장소에 삭제 쿼리를 만들어 놓습니다.    
+   * 이후 `transaction.commit()` 이나 `em.flush()` 가 이루어지면 삭제 쿼리가 DB에 반영됩니다.         
+* 이렇게 삭제된 데이터는 재사용하지 말고 가비지 컬렉션의 대상이 되도록 두는 것이 좋습니다.        
+
+# 플러시    
+**플러시 :** 는 영속성 컨텍스트의 변경 내용을 데이터베이스에 반영합니다.    
+   
+1. 변경 감지가 동작해서 영속성 컨텍스트에 있는 모든 엔티티를 스냅샷과 비교해서 수정된 엔티티를 찾는다.   
+수정된 엔티티는 수정 쿼리를 만들어 '쓰기 지연 SQL 저장소'에 등록합니다.   
+2. 쓰기 지연 SQL 저장소의 쿼리를 데이터베이스에 전송합니다.(등록,수정,삭제 쿼리)   
+
+**영속성 컨텍스트를 플러시하는 방법**
+* `em.flush()`를 직접 호출한다.     
+   * 강제 플러시로 테스트나 다른 프레임워크와 JPA를 함께 사용할 때 정도만 사용한다.    
+* 트랜잭션 커밋 시 플러시가 자동 호출된다.   
+   * 플러시를 하고 커밋을 해야 데이터가 반영되므로 커밋전에 플러시를 자동 수행한다.   
+* JPQL 쿼리 실행 시 플러시가 자동 호출된다.   
+   * JPQL은 SQL로 변환되어 데이터베이스의 데이터를 처리한다.   
+   * 하지만 플러시를 진행하지 않으면 이전 데이터들이 DB에 없어 SQL 쿼리가 적용되지 않으므로 플러시 처리를 해준다.   
+* 참고로 `em.find()` 매서드를 호출할 때는 플러시가 실행되지 않으므로 미리 처리해주자     
+    
+
+
 
 
 
