--- a/03 영속성 관리.md
+++ b/03 영속성 관리.md
@@ -406,6 +406,25 @@ em.remove(memberA);
    * 하지만 플러시를 진행하지 않으면 이전 데이터들이 DB에 없어 SQL 쿼리가 적용되지 않으므로 플러시 처리를 해준다.   
 * 참고로 `em.find()` 매서드를 호출할 때는 플러시가 실행되지 않으므로 미리 처리해주자     
     
+## 플러시 모드 옵션   
+* 엔티티 매니저에 플러시 모드를 직접 정하려면 `javax.persistence.FlushModeType`을 사용하면 된다.     
+     
+* FlushModeType.AUTO : 커밋이나 쿼리를 실행할 때 플러시(기본 값)    
+* FlushModeType.COMMIT : 커밋할 때만 플러시   
+   
+별도로 지정하지 않으면 `FlushModeType.AUTO`로 동작하며 대부분 AUTO를 이용한 방식을 사용한다.    
+간혹, 성능 최적화를 위해 COMMIT 모드를 사용하기도 한다. `이유는 궁금하지만 나중에 나온다니까`   
+
+```java
+em.setFlushMode(FlushModeType.COMMIT)    
+```
+혹시라도 플러시라는 이름으로 인해 영속성 컨텍스트에 보관된 엔티티를 지운다고 생각하면 안된다.    
+**플러시는 영속성 컨텍스트의 변경 내용을 데이터베이스에 동기화하는 것이다.**    
+그리고 데이터베이스와 동기화를 최대한 늦추는 것이 가능한 이유는 트랜잭션이라는 작업 단위가 있기 때문이다.   
+트랜잭션 커밋 직전에만 변경 내용을 데이터베이스에 보내 동기화하면 된다.  
+
+
+
 
 
 
